[gd_scene load_steps=2 format=3 uid="uid://chmg35fq7l2iv"]

[ext_resource type="Script" uid="uid://47rxrpo22tod" path="res://scripts/custom_popup.gd" id="1_5mi5i"]

[node name="CustomPopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -99.0
offset_right = 78.5
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_5mi5i")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.168627, 0.156863, 0.129412, 1)

[node name="OuterMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="OuterMarginContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.694118, 0.647059, 0.552941, 1)

[node name="MarginContainer" type="MarginContainer" parent="OuterMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="OuterMarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RowLabel" type="Label" parent="OuterMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rows: 10"

[node name="RowSlider" type="HSlider" parent="OuterMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
value = 10.0
rounded = true

[node name="ColumnLabel" type="Label" parent="OuterMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Columns: 10"

[node name="ColumnSlider" type="HSlider" parent="OuterMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
value = 10.0
rounded = true

[node name="MineLabel" type="Label" parent="OuterMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mines: 15"

[node name="MineSlider" type="HSlider" parent="OuterMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
value = 15.0
rounded = true

[node name="HSeparator" type="HSeparator" parent="OuterMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="OuterMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CustomCancelButton" type="Button" parent="OuterMarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="CustomConfirmButton" type="Button" parent="OuterMarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Confirm"

[connection signal="value_changed" from="OuterMarginContainer/MarginContainer/VBoxContainer/RowSlider" to="." method="_on_row_slider_value_changed"]
[connection signal="value_changed" from="OuterMarginContainer/MarginContainer/VBoxContainer/ColumnSlider" to="." method="_on_column_slider_value_changed"]
[connection signal="value_changed" from="OuterMarginContainer/MarginContainer/VBoxContainer/MineSlider" to="." method="_on_mine_slider_value_changed"]
[connection signal="pressed" from="OuterMarginContainer/MarginContainer/VBoxContainer/HBoxContainer/CustomCancelButton" to="." method="_on_custom_cancel_button_pressed"]
[connection signal="pressed" from="OuterMarginContainer/MarginContainer/VBoxContainer/HBoxContainer/CustomConfirmButton" to="." method="_on_custom_confirm_button_pressed"]
